
* Fix wrapping of `http.request()` for node v18.17.0. Before this change, a
  call with a non-Function callback -- `http.request(urlString, {}, 'this-is-not-a-cb-function')`
  -- would accidentally *not* fail because of the agent's instrumentation.

* Fix tedious instrumentation to recognize "connection.prepare()" usage in
  tedious@16.2.0 and later.

[float]
===== Chores

* Inline the `elastic-apm-http-client` package code into this repo.
  ({issues}3506[#3506])


[[release-notes-3.48.0]]
==== 3.48.0 - 2023/07/07

*Known issue*: You must upgrade to 3.49.0 or later for the ESM support
described below to work, because the "loader.mjs" file was accidentally not
published.

[float]
===== Features

* Initial and experimental ECMAScript Module (ESM) support.
  With the following invocation the APM agent will now be able to instrument
  modules loaded via `import`. (See the https://nodejs.org/api/esm.html#introduction[Node.js introduction to ESM].)
+
[source,bash]
----
node -r elastic-apm-node/start.js \
  --experimental-loader=elastic-apm-node/loader.mjs \
  server.mjs

# or

NODE_OPTIONS='-r elastic-apm-node/start.js --experimental-loader=elastic-apm-node/loader.mjs'
node server.mjs
----
+
The new usage requirement is the `--experimental-loader=elastic-apm-node/loader.mjs` option.
This initial release only includes support for instrumenting a subset of the
modules listed at <<supported-technologies>>. This set will grow in subsequent
versions. Notably, ESM support does not currently work in node v20 -- only in
recent versions of node v12-v18. ESM support will remain experimental while the
https://nodejs.org/api/esm.html#loaders[Node.js Loaders API] is experimental.
See <<esm>> for full details.

* Send `configured_hostname` and `detected_hostname` metadata separately,
  rather than the old deprecated single `hostname` metadatum. As well, the
  detected hostname now attempts to collect a FQDN to be used in the